# MatchaGame

./: CMakeLists.txt  CMakeSettings.json  README.md  matchagame_schema.md
client/: CMakeLists.txt  main.cpp
client/PFCNet/: main.cpp
client/TicTacNet/: TicTacNet.cpp  TicTacNet.hpp  TicTacNetGUI.cpp  TicTacNetGUI.hpp  main.cpp  main_gui.cpp
client/engine/: GameClient.hpp
docs/: Screens.md  echange_serveur-client.md  matchagame_schema.md
server/: CMakeLists.txt  main.cpp
